# page-loader

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-and-test-action.yaml
page_loader/: __init__.py  content_loader.py  get_content.py  image_loader.py  links_for_downloading.py  loader.py  logger.py  modify_name.py  names_formatter.py  parse_cli_args.py  parsing.py  reader.py  services.py  write_to_file.py
page_loader/scripts/: page_loader.py
tests/: test_downloader.py
tests/fixtures/: changed.html  fixture.html  original.html  page-loader-hexlet-repl-co.html
tests/fixtures/files/: fixture.html
