[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Third trainig project as a backend webdeveloper"
classifiers = [
    "Topic :: Education",
    "Programming Language :: Python :: 3"
]
authors = ["Anna Shchankina"]
repository = 'https://github.com/AnnaCanada/python-project-lvl3.git'
packages = [
  {include = "page_loader"},
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:download"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
