[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Third trainig project as a backend webdeveloper"
classifiers = [
    "Topic :: Education",
    "Programming Language :: Python :: 3"
]
authors = ["Anna Shchankina"]
repository = 'https://github.com/AnnaCanada/python-project-lvl3.git'
packages = [
  {include = "page_loader"},
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
progress = "^1.6"


[tool.poetry.scripts]
page-download = "page_loader.scripts.page_loader:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.0.2"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
